# binary-rts

binaryrts/cli/src/binaryrts/commands/: convert.py  select.py  utils.py
binaryrts/cli/src/binaryrts/parser/: coverage.py
binaryrts/cli/src/binaryrts/rts/: base.py  cpp.py  syscall.py
binaryrts/cli/src/binaryrts/vcs/: diff_file.py
binaryrts/client/: coverage.c  modules.c
binaryrts/listener/: test_listener.cpp
binaryrts/resolver/: resolver.cpp
cmake/: DynamoRIO.cmake
pintools-rts/: .gitignore  Makefile  README.md  functrace.cpp  makefile.rules
pintools-rts/pin_listener/: pin_annotations.c  pin_annotations.h  pin_test_listener.cpp  pin_test_listener.h
sample/tests/: CMakeLists.txt  main.cpp  testfoo.cpp
